Fixes problem with the top bar being too short on interior pages

--- a/scss/global/_top-bar.scss
+++ b/scss/global/_top-bar.scss
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 40.063em) { 
+  
+  .top-bar, .top-bar-section li > a, divider {
+    height: rem-calc(50px);
+  }
 
   .logo-wrapper {
     position: relative;
@@ -43,7 +47,8 @@
 }
 
 
-//Add universal styles
+//Add universal style
+
 .contain-to-grid {
   z-index: 250;
 }
